Add monitoring logs (#807)
Add monitoring logs